[package]
name = "gattii"
version = "0.13.0"
authors = ["Bryant Mairs <bryant@mai.rs>"]
categories = ["hardware-support"]
keywords = ["serial", "hardware", "system", "RS232", "terminal"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/susurrus/gattii"
description = "Cross platform GUI (GTK-based) serial terminal"

[badges]
appveyor = { repository = "Susurrus/gattii", service = "gitlab" }
gitlab = { repository = "susurrus/gattii" }
travis-ci = { repository = "Susurrus/gattii" }

[[bin]]
name = "gattii"
doc = false

[dependencies]
clap = "2.22"
cairo-rs = { version = "0.5", features = ["v1_12"] }
chrono = "0.4"
env_logger = "0.6"
gdk = "0.9"
glib = "0.6"
gtk = { version = "0.5", features = ["v3_14"] }
log = "0.4"
serialport = "3.1"
